--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="container" style="background-color:#151515;">
     <nav>
-        <a href="/index.html"><span>BookKaro</span> Cinema</a>
+        <a href="BookKaro/index.html"><span>BookKaro</span> Cinema</a>
     </nav>
 
 
